test/compile-errors/set-field-of-by-val.crow
main void()
	r mut r = 0,
	r.x := 3

r record by-val, mut
	x mut nat
